[package]
name = "tepl"
description = "Bindings for tepl-3"
homepage = "https://github.com/vhdirk/tepl-rs"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
keywords = ["tepl", "amtk", "gtk-rs", "gnome"]
license = "MIT"
version = "0.0.1"
exclude = [
    "gir-files/*",
]



# [features]
# v1_31 = ["gmime-sys/v1_31"]
# v1_32 = ["v1_31", "gmime-sys/v1_32"]
# v1_32_4 = ["v1_32", "gmime-sys/v1_32_4"]
# v1_34 = ["v1_32_4", "gmime-sys/v1_34"]
# v1_36_7 = ["v1_34", "gmime-sys/v1_36_7"]
# v1_38 = ["v1_36_7", "gmime-sys/v1_38"]
# v1_42 = ["v1_38", "gmime-sys/v1_42"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
lazy_static = "1.0"

amtk = { path = "../amtk" }

tepl-sys   = { path = "../tepl-sys" }

gio         = "^0.4.0"
gio-sys     = "^0.6.0"
glib        = "^0.5.0"
glib-sys    = "^0.6.0"
gobject-sys = "^0.6.0"
